--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                 </a>
               </li>
               <li class="menu-list__item">
-                <a class="menu-list__link" href="#">
+                <a class="menu-list__link" href="for-partners.html">
                   Партнёрам
                 </a>
               </li>
               <li class="menu-list__item">
-                <a class="menu-list__link" href="#">
+                <a class="menu-list__link" href="recalls.html">
                   Отзывы
                 </a>
               </li>
@@ -64,14 +64,14 @@
             </svg>
             <ul class="header-lang__list">
               <li class="header-lang__list-item">
-                <p class="header-lang__list-text">
+                <a href="#" class="header-lang__list-text">
                   RU
-                </p>
+                </a>
               </li>
               <li class="header-lang__list-item">
-                <p class="header-lang__list-text">
+                <a href="#" class="header-lang__list-text">
                   Eng
-                </p>
+                <a>
               </li>
             </ul>
           </button>
@@ -145,7 +145,9 @@
                   <div class="exchange-column-choose__top exchange-column-choose-top">
                     <div class="exchange-column-choose-top__box">
                       <img class="exchange-column-choose-top__box-img" src="images/reserves-icon-1.svg" alt="img">
-                      <p class="exchange-column-choose-top__box-text">Bitcoin</p>
+                      <p class="exchange-column-choose-top__box-text exchange-column-choose-top__box-text--first">
+                        Bitcoin BTC
+                      </p>
                     </div>
                     <button class="exchange-column-choose-top__btn" type="button">
                       <p class="exchange-column-choose-top__btn-text">
@@ -331,7 +333,8 @@
                   <input class="exchange-column-bottom__box-input" type="text" placeholder="Сумма">
                 </div>
                 <p class="exchange-column-bottom__text">
-                  Минимальная сумма: <span>0.01176975 BTC</span>
+                  Минимальная сумма: <span>0.01176975 </span>
+                  <span class="exchange-column-bottom__text--first">BTC</span>
                 </p>
               </form>
             </div>
@@ -350,8 +353,10 @@
                 <div class="exchange-column__choose exchange-column-choose">
                   <div class="exchange-column-choose__top exchange-column-choose-top">
                     <div class="exchange-column-choose-top__box">
-                      <img class="exchange-column-choose-top__box-img" src="images/reserves-icon-1.svg" alt="img">
-                      <p class="exchange-column-choose-top__box-text">Bitcoin</p>
+                      <img class="exchange-column-choose-top__box-img" src="images/reserves-icon-2.svg" alt="img">
+                      <p class="exchange-column-choose-top__box-text exchange-column-choose-top__box-text--second">
+                        Ethereum ETH
+                      </p>
                     </div>
                     <button class="exchange-column-choose-top__btn" type="button">
                       <p class="exchange-column-choose-top__btn-text">
@@ -363,7 +368,8 @@
                     </button>
                   </div>
                   <p class="exchange-column-choose__text">
-                    Резерв <span>84 383 988.65 USDT</span>
+                    Резерв <span class="exchange-column-choose__text--reserve">84 383 988.65 </span>
+                    <span class="exchange-column-choose__text-short--second">ETH</span>
                   </p>
                 </div>
                 <ul class="exchange-column__list exchange-column-list mix item-first">
@@ -562,19 +568,24 @@
               </div>
               <form class="exchange-column__bottom exchange-column-bottom" action="#">
                 <div class="exchange-column-bottom__box">
-                  <p class="exchange-column-bottom__box-crypto">
-                    USDT
+                  <p class="exchange-column-bottom__box-crypto exchange-column-bottom__box-crypto--second">
+                    ETH
                   </p>
                   <input class="exchange-column-bottom__box-input" type="text" placeholder="Сумма">
                 </div>
                 <p class="exchange-column-bottom__text">
-                  Курс обмена: <span>1 BTC - 21319.7726971 USDT</span>
+                  Курс обмена: 1
+                  <span class="exchange-column-bottom__text-short--first">
+                    BTC
+                  </span>
+                  <span> - 21319.7726971 </span>
+                  <span class="exchange-column-bottom__text-short-reserve--second">ETH</span>
                 </p>
               </form>
             </div>
           </div>
         </div>
-      </section> 
+      </section>
       <section class="main__details details">
         <div class="container">
           <div class="details__inner">
@@ -641,7 +652,7 @@
             </form>
           </div>
         </div>
-      </section> 
+      </section>
       <section class="main__info info">
         <div class="container">
           <div class="info__inner">
@@ -751,7 +762,7 @@
             </div>
           </div>
         </div>
-      </section> 
+      </section>
       <section class="main__about about">
         <div class="container">
           <h2 class="about__title">
@@ -787,7 +798,7 @@
             Покупка биткоинов с DemiCube – это быстро, выгодно и безопасно!
           </p>
         </div>
-      </section> 
+      </section>
       <section class="main__partners partners">
         <div class="container">
           <h2 class="partners__title">
@@ -824,7 +835,7 @@
             </li>
           </ul>
         </div>
-      </section> 
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
@@ -894,7 +905,7 @@
           </div>
         </div>
       </div>
-    </footer> 
+    </footer>
   </div>
 
 
