--- a/order.html
+++ b/order.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="./scss/auto-style.css">
+    <link rel="stylesheet" href="./scss/style.css">
 </head>
 
 <body class="body body-order">
@@ -228,6 +228,9 @@
                                             alt="copy">
                                     </button>
                                 </div>
+                                <p class="order-form-body-item__desc-text">
+                                    Нажмите на кнопку копирования или проверьте правильность ввода кошелька для избежания ошибки.
+                                </p>
                             </div>
                             <div class="order-form-body__item order-form-body-item">
                                 <p class="order-form-body-item__text">
